JS THEMING NOW WORKING OMG

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -30,17 +30,11 @@
 				<ul></ul>
 			</aside>
 			<div id="content-area">
-				<h1 onclick="" id="config-set-title">Keybinds</h1>
+				<h1 onclick="" id="config-set-title"></h1>
 			</div>
 		</div>
 		<footer>
-			<button
-				type="button"
-				id="theme-toggle"
-				onclick="toggle_theme"
-			>
-				󰔎
-			</button>
+			<button type="button" id="theme-toggle">󰔎</button>
 			<p>|<a href="http://github.com/AcroPolis914">HyprUI</a></p>
 		</footer>
 	</body>
