--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -8,7 +8,7 @@
 		/>
 		<!-- <meta http-equiv="refresh" content="1" /> -->
 		<title>Hyprland Config Parser by Pol</title>
-		<script type="module" src="script.js" defer></script>
+		<script type="module" src="scripts/script.js"></script>
 		<script type="module" src="jslib/json-viewer.js"></script>
 		<script type="module" src="jslib/hotkeys.min.js"></script>
 		<script
