New onboarding window for everyone to see on first. Needed for font config and for warning that this is an alpha project

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -15,15 +15,14 @@
 			type="module"
 			src="jslib/tom-select.complete.min.js"
 		></script>
-		<!-- <script src="jslib/eruda.js"></script>
-		<script>
-			eruda.init();
-		</script> -->
 		<link rel="stylesheet" href="reset.css" />
 		<link rel="stylesheet" href="style.css" />
 		<link rel="stylesheet" href="jslib/tom-select.css" />
 	</head>
 	<body>
+		<div id="onboarding" class="hidden">
+			<h1>Hello!</h1>
+		</div>
 		<header> HyprUI</header>
 		<div id="main">
 			<aside id="sidebar">
@@ -35,7 +34,7 @@
 		</div>
 		<footer>
 			<button type="button" id="theme-toggle">󰔎</button>
-			<p>|<a href="http://github.com/AcroPolis914">HyprUI</a></p>
+			<p>|<a href="http://github.com/AcroPolis914">HyprSettings</a></p>
 		</footer>
 	</body>
 
