--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -44,7 +44,7 @@
 				This is very much in its
 				<span class="warning">alpha state</span>. Things may
 				break, things may not work. If you have time, dive in
-				and make changes, and submit pull requests at found at
+				and make changes, and submit pull requests at
 				the
 				<a
 					href="https://github.com/acropolis914/hyprsettings"
@@ -63,16 +63,17 @@
 				<span class="success">What's working? <br /></span>
 				<ul>
 					<li>The keybind editor works as expected</li>
-					<li>you can remove # to
+					<li>You can remove # to
 						turn comment to a key(if valid)</li>
 				</ul>
 			</p>
 
 			<p>
-				<span class="warning">What's not working<br /></span>
+				<span class="warning">What's not (yet) working<br /></span>
 				<ul>
 					<li>Adding new items</li>
 					<li>Editing config lines not yet fully implemented and pused to repo</li>
+					<li>Globbing of source files. For now, they need to be on the same/relative dir</li>
 				</ul>
 			</p>
 			<button
