feat: Enhance onboarding experience and improve font handling in configuration

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -39,11 +39,11 @@
 		</footer>
 
 		<div id="onboarding" class="hidden">
-			<h1>Hello!</h1>
+			<h1>Hello! <span class="danger">Please read!</span></h1>
 			<p>
 				This is very much in its
 				<span class="warning">alpha state</span>. Things may
-				break, things may not work. If you have time, dive in
+				break, things may not work, things <span class="danger">will still change</span>. If you have time, dive in
 				and make changes, and submit pull requests at
 				the
 				<a
@@ -55,7 +55,8 @@
 			<p>
 				A config has been written to
 				<code>~/.config/hypr/hyprsettings.toml</code><br />
-				Please change the font to an available Nerd Font
+				A font has been automatically chosen. <br>
+				If you don't see this droplet , or if you have a preferred font, please exit and change the font to a in the config file to some Nerd Font.
 				<br />
 			</p>
 
