--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -10,11 +10,12 @@
 		<title>Hyprland Config Parser by Pol</title>
 		<script type="module" src="scripts/script.js"></script>
 		<script type="module" src="jslib/json-viewer.js"></script>
-		<script type="module" src="jslib/hotkeys.min.js"></script>
+		<script src="jslib/hotkeys.min.js"></script>
 		<script
 			type="module"
 			src="jslib/tom-select.complete.min.js"
 		></script>
+
 		<link rel="stylesheet" href="reset.css" />
 		<link rel="stylesheet" href="style.css" />
 		<link rel="stylesheet" href="jslib/tom-select.css" />
@@ -30,6 +31,7 @@
 			</div>
 		</div>
 		<footer>
+			<div id="keys-display"></div>
 			<button type="button" id="theme-toggle">󰔎</button>
 			<p>
 				<a href="http://github.com/AcroPolis914/hyprsettings"
