feat: Enhance config rendering and settings interaction with improved comment handling and keyboard navigation

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -59,7 +59,7 @@
 				A config has been written to
 				<code>~/.config/hypr/hyprsettings.toml</code><br />
 				A font has been automatically chosen. <br>
-				If you don't see this droplet , or if you have a preferred font, please exit and change the font to a in the config file to some Nerd Font.
+				If you don't see this droplet , or if you have a preferred font, please exit and change the font to a in the config file to some Nerd Font.(and comeback please XD)
 				<br />
 			</p>
 
@@ -69,7 +69,7 @@
 					<li>The keybind, line comment editor.</li>
 					<li>You can remove # to
 						turn line comment to a key(if valid)</li>
-					<li>Theming, settings, a lot actually. just check it out!</li>
+					<li>Theming, settings, Autosaving! a lot actually. just check it out!</li>
 				</ul>
 			</p>
 
@@ -79,6 +79,7 @@
 					<li>Globbing of source files. For now, they need to be on the same/relative dir as individual files.</li>
 					<li>Adding new items. Manually add something in your conf for now</li>
 					<li>Editing config lines not yet fully implemented and posted to repo</li>
+					<li>Keyboard navigation inside items.</li>
 					
 				</ul>
 			</p>
@@ -87,12 +88,21 @@
 	<div class="column" id="instructions">
 <h1>Usage:</h1>
 <ul>
-	<li>F1 : show this screen</li>
-	<li>F5 : Reload Window(will update some elements)</li>
-	<li>Arrow Keys (future: hjkl too) : Navigation </li>
-	<li>Enter: Open a key editor modal</li>
-	<li>Esc : Leave the opened editor modal</li>
-	<li>Delete: Delete(lol) (will ask for confirmation)</li>
+	<li><b>F1</b>Show/hide this screen</li>
+	<li><b>F5</b>Reload Window(will update some elements)</li>
+	<li><b>Arrows</b>: Navigation </li>
+	<li><b>Enter</b> Open a key editor modal</li>
+	<li><b>Esc</b> Leave the opened editor modal</li>
+	<li><b>Delete</b> Delete(lol) (will ask for confirmation)</li>
+</ul>
+<h1>Next updates:</h1>
+<ul>
+	<li>Prio: Globbing of source files (sorry was kinda lazy implementing it lol)</li>
+	<li>Prio: Navigation inside keys</li>
+	<li>Easy: Tooltips and Hyprland Documentation</li>
+	<li>Easy but theres so many: Item sliders,Color/Gradient Selectors</li>
+	<li>Basic nvim-like motions</li>
+	<li>IDK You tell me!</li>
 </ul>
 <button
 type="button"
